# todo-app

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_IMPLEMENTATION_COMPLETE.md  AUTH_FLOW_TEST_SUMMARY.md  BACKEND_AUTH_IMPLEMENTATION_SUMMARY.md  BACKEND_EXECUTION_SUMMARY.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_IMPLEMENTATION_SUMMARY.md  BACKEND_QUICKSTART.md  BACKEND_VERIFICATION.md  DEBUG_CONVERSATION_FIX.md  FINAL_STATUS_DASHBOARD.md  FRONTEND_AUTH_MIGRATION_GUIDE.md  FRONTEND_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  MIGRATION_COMPLETE.md  PHASES_4-8_COMPLETION_SUMMARY.txt  PHASES_4-8_IMPLEMENTATION_REPORT.md  PHASE_IV_IMPLEMENTATION_SUMMARY.md  README.md  cohere api key.txt  git commands.txt  github commands.txt  package-lock.json  package.json  pyproject.toml  test_auth_flow.py  test_auth_integration.py  test_backend_debug.py  test_complete_flow.py  test_signup_simple.py  tmpclaude-e12b-cwd
.claude/: settings.local.json
.claude/agents/: agent-behavior-spec-writer.md  architecture-planner-chatbot.md  architecture-planner.md  backend-engineer.md  chatbot-backend-engineer.md  chatbot-orchestrator.md  db-engineer.md  (+15 more)
backend/: .env.example  INTEGRATION_TEST.md  README.md  __init__.py  config.py  db.py  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test_password_validation.py  tmpclaude-ae85-cwd  todo.db
backend/.claude/: settings.local.json
backend/agents/: __init__.py  cohere_todo_agent.py
backend/mcp/: __init__.py  tools.py
backend/routes/: auth.py  chat.py  tasks.py
backend/services/: __init__.py  conversation.py
backend/src/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/src/dependencies/: auth.py
backend/src/routes/: auth.py  tasks.py
backend/src/utils/: __init__.py  password.py
backend/tests/: conftest.py  test_auth.py  test_tasks.py
backend/utils/: jwt.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  FINAL_CHECKLIST.md  README.md  TESTING_GUIDE.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
k8s/: DEMO.md  DEPLOYMENT_STATUS.md
src/: __init__.py  main.py  todo_manager.py
(+154 files in other folders)
